# uterus-scope-ai

./: .env.example  .gitignore  README.md  pyproject.toml
api/: __init__.py  main.py
api/schemas/: requests.py  responses.py
scripts/: export_onnx.py  generate_synthetic.py
src/uterus_scope/: __init__.py  config.py
src/uterus_scope/agents/: __init__.py  candidacy.py  decision.py  risk_scorer.py
src/uterus_scope/explainability/: __init__.py  attention.py  gradcam.py
src/uterus_scope/models/: __init__.py  backbone.py  fibrosis.py  segmentation.py  temporal.py  unified.py  vascularity.py
src/uterus_scope/reports/: __init__.py  generator.py
src/uterus_scope/sdk/: __init__.py  client.py
tests/: test_agents.py  test_api.py  test_models.py  test_preprocessing.py
